<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.weatherapp.MainActivity">

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_location"
        android:orderInCategory="100"
        android:title="@string/action_location"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_theme_dark"
        android:orderInCategory="110"
        android:title="@string/action_theme_dark"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_format_Temperaturi"
        android:orderInCategory="120"
        android:title="@string/action_format_Temperaturi"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_author"
        android:orderInCategory="190"
        android:title="@string/action_author"
        app:showAsAction="never" />
</menu>